<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/popup_error_padding"
    android:paddingTop="@dimen/popup_error_padding"
    android:paddingEnd="@dimen/popup_error_padding"
    android:paddingBottom="@dimen/popup_error_padding_bottom">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorDarkGray"
        android:textSize="@dimen/popup_title_text_size"
        tools:text="@string/success_receiving_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/spacing_s"
        android:textColor="@color/colorGray"
        tools:text="@string/success_receiving_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:paddingStart="@dimen/button_dialog_padding_horizontal"
        android:paddingEnd="@dimen/button_dialog_padding_horizontal"
        android:background="@drawable/button_dialog_background"
        android:theme="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/spacing_m"
        android:text="@string/text_continue"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/popup_button_text_size" />
</RelativeLayout>