<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/popup_error_padding"
    android:paddingTop="@dimen/popup_error_padding"
    android:paddingEnd="@dimen/popup_error_padding"
    android:paddingBottom="@dimen/popup_error_padding_bottom">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/start_route_title"
        android:textColor="@color/colorDarkGray"
        android:textSize="@dimen/popup_title_text_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/yesButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:paddingStart="@dimen/button_dialog_padding_horizontal"
        android:paddingEnd="@dimen/button_dialog_padding_horizontal"
        android:background="@drawable/button_dialog_background"
        android:theme="@style/AppTheme"
        android:layout_width="@dimen/popup_yes_no_button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/spacing_m"
        android:layout_marginEnd="@dimen/popup_yes_button_margin_end"
        android:layout_toStartOf="@id/noButton"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/popup_button_text_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/noButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:paddingStart="@dimen/button_dialog_padding_horizontal"
        android:paddingEnd="@dimen/button_dialog_padding_horizontal"
        android:background="@drawable/button_dialog_background"
        android:theme="@style/AppTheme"
        android:layout_width="@dimen/popup_yes_no_button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/spacing_m"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/popup_button_text_size" />
</RelativeLayout>